Some files location got fixed

--- a/DataTalks_DE_Bootcamp/Week1/Introduction_Docker/Dockerfile
+++ b/DataTalks_DE_Bootcamp/Week1/Introduction_Docker/Dockerfile
@@ -1,5 +1,9 @@
+#My first Docker Image c:
 FROM python:3.9.1
 
 RUN pip install pandas
 
-ENTRYPOINT [ "bash" ]
+WORKDIR  /app/
+COPY pipeline.py pipeline.py 
+
+ENTRYPOINT [ "python", "pipeline.py" ]  
